better HNS sidebar and some bug fixes